--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         kotlin_version = "1.3.72"
         fragment_version = "1.2.5"
+        material_version = "1.1.0"
     }
     repositories {
         google()
