--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext {
         kotlin_version = "1.3.72"
-        fragment_version = "1.2.5"
+        fragment_version = "1.3.0-alpha06"
         material_version = "1.1.0"
     }
     repositories {
