--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.activity:activity-ktx:1.2.0-alpha06"
+    implementation "com.google.android.gms:play-services-location:$location_services_version"
 
     //Material components
     implementation "com.google.android.material:material:$material_version"
