--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version = "1.3.72"
         fragment_version = "1.3.0-alpha06"
         material_version = "1.1.0"
+        location_services_version = "17.0.0"
     }
     repositories {
         google()
