--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
 
     defaultConfig {
         applicationId "com.tomgozdek.simplecompass"
@@ -54,6 +53,12 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "androidx.arch.core:core-testing:$arch_test_version"
+    testImplementation "androidx.test:core-ktx:$test_core_version"
+    testImplementation "androidx.test.ext:junit-ktx:$test_ext_kotlin_runner_version"
+    testImplementation "org.robolectric:robolectric:$roboelectric_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
