--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ buildscript {
         fragment_version = "1.3.0-alpha06"
         material_version = "1.1.0"
         location_services_version = "17.0.0"
+        arch_test_version = "2.0.0"
+        test_core_version = "1.2.0"
+        test_ext_kotlin_runner_version = '1.1.1'
+        roboelectric_version = '4.3.1'
+        mockito_version = '3.3.3'
     }
     repositories {
         google()
